# synthetic_reports

./: .gitignore  LICENSE  ONTOLOGY_INTEGRATION.md  PROJECT_STRUCTURE.md  README.md  analysis.py  pyproject.toml
configs/: README.md
configs/samples/: config.yaml
docs/: README.md
docs/guides/: RADLEX_INTEGRATION.md  RADLEX_PIPELINE_GUIDE.md  README.md
examples/: README.md  radlex_example.py  radlex_pipeline_demo.py
notebooks/: clinical_visualization.py  cohort.ipynb  synthrad_cohort.ipynb  synthrad_demo.ipynb
src/: radlex.py
src/synrad_lung.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/synthrad/: __init__.py  __main__.py  anatomic_mapper.py  generator.py  lexicons.py  ontology_config_generator.py  radlex_config.py  radlex_lexicons.py  radlex_resolver.py  radlex_service.py  schema.py
src/synthrad.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: README.md  run_tests.py  test_basic.py  test_edge_cases.py  test_generator.py  test_integration.py  test_lexicons.py  test_longitudinal.py  test_radlex_integration.py  test_recist_compliance.py  test_styles.py
tools/: README.md
tools/builders/: config_builder.py
tools/generators/: generate.py  generate_reports.py  run_multiple_configs.bat  run_multiple_configs.sh
tools/utils/: config_manager.py
